<resources>
    <string name="app_name">Attendance Tracker</string>
    <string name="app_logo">app logo</string>
    <string name="username">Username</string>
    <string name="password">New password</string>
    <string name="sing_in">Sign In</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="please_enter_your_passcode">PLEASE ENTER YOUR PASSCODE</string>
    <string name="passcode">Passcode</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="done">DONE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="testing">Testing ...</string>
    <string name="error_username">username must be more than 1</string>
    <string name="password_error">password must be more than 5</string>
    <string name="same_password_error">password must be the same</string>
    <string name="password_not_set">Password is not set</string>
    <string name="username_not_set">Username is not set</string>
    <string name="email_not_set">Email not set</string>
    <string name="today">TODAY</string>
    <string name="settings">SETTINGS</string>
    <string name="profile">PROFILE</string>
    <string name="classes">REGISTERED CLASSES</string>
    <string name="attendance_tracker">Attendance Tracker</string>
    <string name="history">HISTORY</string>
    <string name="up_next">UP NEXT</string>
    <string name="math_150_01_geometry">MATH 150 - 01 GEOMETRY</string>
    <string name="ball_hall_room_401">Ball Hall, Room 401</string>
    <string name="time">9:00 am - 10:00am</string>
    <string name="up_coming_class">UP COMING CLASS</string>
    <string name="science_201_02_biology">SCIENCE 201 - 02 BIOLOGY</string>
    <string name="english_01_1_poetry">ENGLISH 01 - 1 POETRY</string>
    <string name="account">Account</string>
    <string name="classname">Classname</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End Date</string>
    <string name="_10_06_20">10/06/20</string>
    <string name="from">From</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="_10_00am">10:00am</string>
    <string name="_08_30am">08:30am</string>
    <string name="cancel">cancel</string>
    <string name="add_new_class">Add new class</string>
    <string name="location">Location</string>
    <string name="add_class">ADD CLASS</string>
    <string name="start_date_here">Start date here</string>
    <string name="end_date_here">End date here</string>
    <string name="end_time_here">End time here</string>
    <string name="start_time_here">Start time here</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="sunday">Sunday</string>
    <string name="endtimepicker">EndTimePicker</string>
    <string name="starttimepicker">startTimePicker</string>
    <string name="startDate">startDate</string>
    <string name="enddate">endDate</string>
    <string name="please_set_end_date">please set end date</string>
    <string name="please_set_start_date">Please set start date</string>
    <string name="error_start_and_end_date_equal">Error, can not start and end at the same date</string>
    <string name="error_start_date_cant_be_ahead">Start Date cannot be ahead of End Date</string>
    <string name="set_start_time">Please set start time</string>
    <string name="set_end_time">please set end time</string>
    <string name="error_starta_and_end_equal">Error, can not start and end at the same time</string>
    <string name="error_start_time_ahead">Start Time cannot be ahead of End Time</string>
    <string name="set_classname_error">Please set class name, must be more than 1 letter</string>
    <string name="set_location_error">Please location name, must be more than 1 letter</string>
    <string name="set_select_day_error">Please select at least one day</string>
    <string name="assert_all_fields_are_set_error">Please make sure all fields are filled</string>
    <string name="updateMessage">The chosen classname clashes with a classname already in the database. Would you like to update?</string>
    <string name="classname_conflict">Class Conflict</string>
    <string name="update">Update</string>
    <string name="session_detail">Session Detail</string>
    <string name="student_s_email">Student\'s Email</string>
    <string name="student_name">Student name</string>
    <string name="add_student">Add Student</string>
    <string name="editStudent">edit Student</string>
    <string name="sendStudentEmail">send Student Email</string>
    <string name="message">Message</string>
    <string name="send_email">Send Email</string>
    <string name="delete">Delete</string>
    <string name="subject">subject</string>
    <string name="edit_student">Edit Student</string>
    <string name="check_attendance">check Attendance</string>
    <string name="present_or_absent">present or absent</string>
    <string name="history_database">history_class_db</string>
    <string name="time_taken">Time taken :</string>
    <string name="date_taken">Date taken :</string>
    <string name="history_detail">History Detail</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="username_colon">Username :</string>
    <string name="email_colon">Email :</string>
    <string name="password_colon">Password :</string>
    <string name="hard_reset">Hard reset</string>
    <string name="registered_classes">REGISTERED CLASSES</string>
    <string name="empty_session">empty session</string>
    <string name="empty_session_text">You don\'t have any class session now</string>
    <string name="use_the">Tap the</string>
    <string name="edit_icon">edit button</string>
    <string name="to_add_new_class_session">to add new class session</string>
    <string name="sending_passcode">Sending passcode ...</string>
    <string name="there_s_no_class_scheduled_for_today">There\'s no class\classes scheduled for today</string>
    <string name="log_out">Log out</string>
    <string name="password_not_same">Password is not the same</string>
    <string name="invalid_username_and_password"><![CDATA[Invalid username & password]]></string>
    <string name="quit_app">quit_app</string>
    <string name="no_account">You have no account on file, please sign up</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="password_not_the_same">Password is not the same</string>
    <string name="sent_passcode">A passcode has been sent to your email we have on file</string>
    <string name="no_internet">No network connection, please make sure you are connected to the internet</string>
    <string name="retry">retry</string>
    <string name="unable_to_send_passcode">Sorry, unable to send passcode. please check your internet connection</string>
    <string name="edit_registered_class_session">edit registered class session</string>
    <string name="update_session">Update Session</string>
    <string name="modify_session">Are you sure you want to modify this session?</string>
    <string name="registered_class">REGISTERED CLASSES</string>
    <string name="search_sessions">Search class sessions</string>
    <string name="delete_sesssion_verification"> Are you sure you want to delete this class Session?</string>
    <string name="delete_session_title">Delete Session</string>
    <string name="at_least_one_student">Please you need to add at least one student to this session</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="search_class_history">Search class history</string>
    <string name="history_classes">HISTORY CLASSES</string>
    <string name="assert_delete_history">Are you sure you want to delete this class History?</string>
    <string name="delete_history">Delete History</string>
    <string name="yes">Yes</string>
    <string name="data">data</string>
    <string name="previous_data">previous data</string>
    <string name="title_data">title data</string>
    <string name="change_username">CHANGE USERNAME</string>
    <string name="change_email">CHANGE EMAIL</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="new_username">New Username</string>
    <string name="new_email">New Email</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New Password</string>
    <string name="password_old_new_same">old password can\'t be the same as the new password</string>
    <string name="wrong_password">wrong old password</string>
    <string name="about_app_summary">Attendance Tracker is a simple app for tracking attendance.
        Whether you are a student, a professor or someone who likes to check themselves into do something,
        Attendance Tracker will help you do just that. Thanks for downloading this app and
        I hope it serves the purpose you intend to use it for. Developed with ♥ in New York by
        Kingsley Otto℠. Twitter &#64;pereignon.</string>
    <string name="about_app">About App</string>
    <string name="about">about</string>
</resources>
