<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="notifications_category"
        android:title="Notifications">

        <SwitchPreference
            app:key="notifications"
            app:title="Enable message notifications"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="help_category"
        android:title="Help">

        <Preference
            android:key="feedback"
            android:title="Send feedback"
            android:summary="Report technical issues or suggest new features"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="about_app"
        android:title="@string/about"
        >
        <Preference
            android:key="@string/about"
            android:title="@string/about_app"
            android:summary="@string/about_app_summary"
            />
    </PreferenceCategory>

</PreferenceScreen>