<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/menuListId"
        >

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/mainActivityToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="0dp"
                android:theme="@style/AppTheme"
                app:navigationIcon="@drawable/ic_closed_menu"
                app:titleTextColor="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/attendance_tracker"
                android:textAppearance="@style/TextAppearance.AttendanceTracker.Title"
                android:textColor="@color/colorAccent" />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/menuListLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="150dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <TextView
                android:id="@+id/textView3"
                style="@style/MenuTextVIew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_text_background_shape"
                android:elevation="@dimen/sixteen_dp"
                android:text="@string/today" />

            <TextView
                android:id="@+id/textView4"
                style="@style/MenuTextVIew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/classes" />

            <TextView
                android:id="@+id/textView5"
                style="@style/MenuTextVIew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/profile" />

            <TextView
                android:id="@+id/textView6"
                style="@style/MenuTextVIew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/settings" />

            <TextView
                style="@style/MenuTextVIew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/history" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backDrop_foreground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:background="@drawable/foreground_backdrop"
        android:elevation="@dimen/eight_dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="@dimen/sixteen_dp"
            android:paddingEnd="0dp"
            android:text="@string/up_next"
            android:textColor="@color/copperGold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_add_class"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>