<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".Model.AddNewClass"
        android:background="@color/colorPrimaryDark"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/createClassnameTextInputLayout"
            style="@style/Widget.AttendanceTracker.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:layout_marginEnd="@dimen/sixteen_dp"
            android:hint="@string/classname"
            app:hintEnabled="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="clear_text"
            android:textColorHint="@color/light_color_text"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/classnameTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.AttendanceTracker.TextInputLayout"
            android:id="@+id/createLocationTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/createClassnameTextInputLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="@dimen/sixteen_dp"
            app:hintEnabled="true"
            android:hint="@string/location"
            android:textColorHint="@color/light_color_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/locationTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createLocationTextInputLayout"
            android:drawableEnd="@drawable/ic_date"
            android:layout_margin="@dimen/sixteen_dp"
            style="@style/TextAppearance.AttendanceTracker.Subtitle"

            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createLocationTextInputLayout"
            android:drawableEnd="@drawable/ic_date"
            android:layout_margin="@dimen/sixteen_dp"
            style="@style/TextAppearance.AttendanceTracker.Subtitle"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/startActualDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/_10_06_20"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startDate"
            android:layout_margin="@dimen/sixteen_dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/actualEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/_10_06_20"
            app:layout_constraintStart_toStartOf="@+id/endDate"
            app:layout_constraintTop_toBottomOf="@+id/endDate"
            android:textColorHint="@color/white"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startActualDate"
            android:layout_margin="@dimen/sixteen_dp"
            android:text="@string/start_time"
            android:drawableEnd="@drawable/ic_watch"
            style="@style/TextAppearance.AttendanceTracker.Subtitle"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:layout_marginStart="@dimen/zero_dp"
            android:text="@string/end_time"
            app:layout_constraintStart_toStartOf="@+id/actualEndDate"
            app:layout_constraintTop_toBottomOf="@id/actualEndDate"
            android:drawableEnd="@drawable/ic_watch"
            style="@style/TextAppearance.AttendanceTracker.Subtitle"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewActualEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:hint="@string/_10_00am"
            app:layout_constraintStart_toStartOf="@+id/endTime"
            app:layout_constraintTop_toBottomOf="@id/endTime"
            android:textColorHint="@color/white"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startTime"
            android:layout_margin="@dimen/sixteen_dp"
            android:hint="@string/_08_30am"
            android:textColorHint="@color/white"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addClassButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="16dp"
            android:text="ADD CLASS"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="?attr/colorPrimary"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextViewActualEndTime" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_new_class"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="@dimen/sixteen_dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/addClassButton"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextViewActualEndTime"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
