<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sixteen_dp"
        android:gravity="center"
        android:text="@string/title_data"
        android:textAllCaps="true"
        android:textColor="@color/copperGold" />

    <TextView
        android:id="@+id/previous_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sixteen_dp"
        android:gravity="center"
        android:text="@string/previous_data"
        android:textColor="@color/copperGold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/data_textInputLayout"
        style="@style/Widget.AttendanceTracker.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/data">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/data_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/affirm_textInputLayout"
        style="@style/Widget.AttendanceTracker.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/data"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/affirm_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:layout_marginEnd="@dimen/sixteen_dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/red" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:layout_marginEnd="@dimen/sixteen_dp"
            android:text="@string/update"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/colorPrimaryDark"
            app:backgroundTint="@color/colorAccent" />
    </LinearLayout>
</LinearLayout>